--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,16 @@ apply plugin: 'android-apt'
 
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'dean'
+            keyPassword 'adadech'
+            storeFile file("$rootDir/keystore.jks")
+            storePassword 'adadech'
+        }
+    }
     compileSdkVersion 24
     buildToolsVersion "24.0.1"
-
     defaultConfig {
         applicationId "com.dhermanu.soulfull"
         minSdkVersion 14
@@ -16,53 +23,56 @@ android {
     buildTypes {
         2
         release {
+            debuggable true
             minifyEnabled false
+            multiDexEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
-
-        debug{
+        debug {
             multiDexEnabled true
         }
     }
-
+    buildTypes.each {
+        it.buildConfigField 'String', 'CONSUMER_KEY', "\"\""
+        it.buildConfigField 'String', 'CONSUMER_SECRET', "\"\""
+        it.buildConfigField 'String', 'TOKEN', "\"\""
+        it.buildConfigField 'String', 'TOKEN_SECRET', "\"\""
+    }
     dexOptions {
         javaMaxHeapSize "4g"
     }
-
     lintOptions {
         abortOnError false
     }
-
     packagingOptions {
         exclude 'META-INF/NOTICE' // will not include NOTICE file
         exclude 'META-INF/LICENSE' // will not include LICENSE file
-        // as noted by @Vishnuvathsan you may also need to include
-        // variations on the file name. It depends on your dependencies.
-        // Some other common variations on notice and license file names
         exclude 'META-INF/notice'
         exclude 'META-INF/notice.txt'
         exclude 'META-INF/license'
         exclude 'META-INF/license.txt'
     }
-
-
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.0'
-    compile 'com.android.support:design:24.2.0'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:design:24.2.1'
     compile 'com.yelp.clientlib:yelp-android:2.0.0'
-    compile 'com.android.support:cardview-v7:24.2.0'
-    compile 'com.android.support:recyclerview-v7:24.2.0'
+    compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.android.gms:play-services:9.4.0'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.jakewharton:butterknife:8.4.0'
-    apt 'com.jakewharton:butterknife-compiler:8.4.0'
-    compile 'com.google.maps.android:android-maps-utils:0.4+'
+    compile 'com.google.maps.android:android-maps-utils:0.4.+'
     compile 'org.parceler:parceler-api:1.1.5'
+    compile 'com.github.techery:properratingbar:0.0.5'
+    compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.afollestad.material-dialogs:core:0.9.0.2'
+    compile 'com.afollestad.material-dialogs:commons:0.9.0.2'
+    testCompile 'junit:junit:4.12'
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
     apt 'org.parceler:parceler:1.1.5'
-
 }
